# Service-Windows

bot/: Cargo.toml
bot/src/: main.rs
ejecutable/: Cargo.toml
ejecutable/src/: main.rs
servicio/: Cargo.toml
servicio/src/: main.rs
