[package]
name = "ejecutable"
version = "0.1.0"
authors = ["LaMeraChuleta <geoffreyytorres25@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.2", features = ["full"] }
futures = "0.3.5"
telegram-bot = "0.7.0"
windows-service = "0.3.0"